# come-back

./: .gitignore  LICENSE  OUTLINE.md  README.md  cs199.sh  map_sources.py  pyproject.toml  scrape_go_repos.py
paper/: main.typ  pipeline_diagram.tex  refs.bib  string_recovery_examples.tex
paper/assets/: pipeline.typ  string-recovery.typ
scripts/: decompile.py  list_duplicate_binaries.py  map_sources.py  scrape_go_repos.py
scripts/data/: decompile.py  map_sources.py  scrape_go_repos.py
scripts/eval/: __init__.py  infer.py
scripts/util/: __init__.py  count_tokens.py  paths.py
src/proj261/: __init__.py
src/proj261/data/: __init__.py  chunk_decomps.py  chunk_sources.py  decompile.py  filter_decomps.py  map_sources.py  scrape_go_repos.py
src/proj261/eval/: __init__.py  compare.py  eval_ast.py  infer.py  rebuild_pending.py  statistics.py  validate_filter.py
src/proj261/eval/comparisons/: __init__.py  codebleu.py  example.py  llm.py  syntax.py
src/proj261/util/: __init__.py  config.py  count_tokens.py  paths.py
statistics/: summary.txt
