[project]
name = "proj261"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.70.0",
    "normalizer>=0.2.1",
    "pyghidra>=3.0.2",
    "tqdm>=4.67.3",
]

[project.scripts]
infer = "proj261.eval.infer:main"
count-tokens = "proj261.util.count_tokens:main"
decompile = "proj261.data.decompile:main"
map-sources = "proj261.data.map_sources:main"
scrape-repos = "proj261.data.scrape_go_repos:main"

[tool.uv]
package = true
