[project]
name = "proj261"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "codebleu>=0.7.0",
    "dotenv>=0.9.9",
    "google-genai>=1.70.0",
    "html2text>=2025.4.15",
    "matplotlib>=3.9",
    "normalizer>=0.2.1",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyghidra>=3.0.2",
    "scipy>=1.14",
    "tqdm>=4.67.3",
    "tree-sitter-go==0.21.2",
]

[project.scripts]
infer = "proj261.eval.infer:main"
validate-filter = "proj261.eval.validate_filter:main"
count-tokens = "proj261.util.count_tokens:main"
decompile = "proj261.data.decompile:main"
filter-decomps = "proj261.data.filter_decomps:main"
chunk-decomps = "proj261.data.chunk_decomps:main"
map-sources = "proj261.data.map_sources:main"
chunk-sources = "proj261.data.chunk_sources:main"
scrape-repos = "proj261.data.scrape_go_repos:main"
compare = "proj261.eval.compare:main"
eval-ast = "proj261.eval.eval_ast:main"
statistics = "proj261.eval.statistics:main"
rebuild-pending = "proj261.eval.rebuild_pending:main"

[tool.uv]
package = true
